Update HTML content and descriptions for clarity

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Rozina Punjwani — Creative Strategist & Graphic Designer</title>
-  <meta name="description" content="Creative strategist and graphic design portfolio of Rozina Punjwani: branding, campaigns, posters, UX/UI website work, and scalable templates for franchises."/>
+  <meta name="description" content="Creative strategist and graphic design portfolio of Rozina Punjwani: branding, campaigns, posters, UX/UI website work, and scalable Canva templates for franchises."/>
   <link rel="icon" href="favicon.ico" type="image/x-icon"/>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -139,7 +139,7 @@
           <div class="card-body">
             <div class="title">Boutique — Logo & identity</div>
             <div class="desc">Minimal logo, color system, and templates for cohesive storefront and social presence.</div>
-            <div class="meta">Role: Identity | Tools: Illustrator, handoff</div>
+            <div class="meta">Role: Identity | Tools: Illustrator, Canva handoff</div>
             <div class="actions">
               <a class="link" href="https://punjwanirozina.wixsite.com/rozinapunjwani/portfolio" target="_blank" rel="noopener">Brand guide →</a>
             </div>
@@ -155,7 +155,7 @@
           <div class="card-body">
             <div class="title">Florist — Visual identity</div>
             <div class="desc">Delicate typography and floral motif adapted across packaging and Instagram templates.</div>
-            <div class="meta">Role: Identity | Tools: Illustrator, </div>
+            <div class="meta">Role: Identity | Tools: Illustrator, Canva</div>
             <div class="actions">
               <a class="link" href="https://punjwanirozina.wixsite.com/rozinapunjwani/portfolio" target="_blank" rel="noopener">See templates →</a>
             </div>
@@ -171,7 +171,7 @@
           <div class="card-body">
             <div class="title">Social cause clothing — Campaign set</div>
             <div class="desc">Cause-forward narrative with adaptable social tiles and print flyers.</div>
-            <div class="meta">Role: Creative direction | Tools: Photoshop </div>
+            <div class="meta">Role: Creative direction | Tools: Photoshop, Canva handoff</div>
             <div class="actions">
               <a class="link" href="https://punjwanirozina.wixsite.com/rozinapunjwani/portfolio" target="_blank" rel="noopener">Campaign overview →</a>
             </div>
@@ -300,15 +300,15 @@
 
       <div class="case" role="article" style="margin-top:28px">
         <div class="visual">
-          <img src="sikyuen-home.jpg" alt="sikyuengroup.mu redesigned homepage screenshot"/>
+          <img src="sikyuen-home.jpg" alt="Sikyuen.mu redesigned homepage screenshot"/>
         </div>
         <div class="copy">
           <div class="label">Case study</div>
-          <h3>sikyuengroup.mu — Content-first UX</h3>
+          <h3>Sikyuen.mu — Content-first UX</h3>
           <p>Refreshed layout and navigation with emphasis on clarity, mobile performance, and easy content updates.</p>
           <p class="meta">Role: UX/UI | Tools: CMS</p>
           <div class="actions">
-            <a class="link" href="https://sikyuengroup.mu" target="_blank" rel="noopener">Visit site →</a>
+            <a class="link" href="https://sikyuen.mu" target="_blank" rel="noopener">Visit site →</a>
           </div>
         </div>
       </div>
@@ -318,7 +318,7 @@
   <!-- TEMPLATES SYSTEMS -->
   <section id="templates" aria-labelledby="templates-title">
     <div class="container">
-      <h2 id="templates-title">Scalable templates
+      <h2 id="templates-title">Scalable templates</h2>
       <p class="sub">Systems that non‑design teams can adapt across stores and campaigns.</p>
 
       <div class="grid">
@@ -331,9 +331,6 @@
             <div class="title">Newsletter templates — Engaged & Lapsed segments</div>
             <div class="desc">Two segment-specific templates with modular blocks for offers, stories, and CTAs.</div>
             <div class="meta">Deliverable: Editable | Revisions: 2 rounds</div>
-            <div class="actions">
-              <a class="link" href="https://www.canva.com/" target="_blank" rel="noopener">Preview in Canva →</a>
-            </div>
           </div>
         </article>
 
@@ -346,9 +343,6 @@
             <div class="title">Social templates — Before/After, Testimonials, Store highlights</div>
             <div class="desc">A cohesive set with locked brand elements and flexible content areas for franchises.</div>
             <div class="meta">Deliverable: Editable | Access level control</div>
-            <div class="actions">
-              <a class="link" href="https://punjwanirozina.wixsite.com/rozinapunjwani/portfolio" target="_blank" rel="noopener">Template set →</a>
-            </div>
           </div>
         </article>
 
@@ -359,11 +353,8 @@
           </div>
           <div class="card-body">
             <div class="title">Catalogue / Ebook — Modular layout</div>
-            <div class="desc">Reusable grid systems, cover variations, and styles for 15–28 pages in Canva/Adobe.</div>
+            <div class="desc">Reusable grid systems, cover variations, and styles for 15–28 pages.</div>
             <div class="meta">Deliverable: Master template + style guide</div>
-            <div class="actions">
-              <a class="link" href="#contact">Request a quote →</a>
-            </div>
           </div>
         </article>
       </div>
@@ -413,7 +404,7 @@
   <footer role="contentinfo">
     <div class="container">
       <p>&copy; 2025 Rozina Punjwani. Design that scales with your brand.</p>
-      <p><a href="https://punjwanirozina.wixsite.com/rozinapunjwani" target="_blank" rel="noopener">Full portfolio on Wix →</a></p>
+      <p><a class="link" href="https://punjwanirozina.wixsite.com/rozinapunjwani" target="_blank" rel="noopener">Full portfolio on Wix →</a></p>
     </div>
   </footer>
 </body>
